src/eclipseworkspace/Sample/src/csd/App.java
/*----------------------------------------------------------------------------------------------------------------------
	Aşağıdaki örnekte error oluşur
----------------------------------------------------------------------------------------------------------------------*/
package csd;

class App {
	public static void main(String [] args) 
	{		
		for (int i = 0; i < 10; ++i);
			System.out.printf("%d ", i); //error
	}
}

